--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "tic-tac-toe",
   "version": "0.0.1",
   "description": "Tic tac toe game",
+  "main": "src",
   "author": "Pratish Shrestha",
   "license": "MIT",
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build public/index.html",
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
