--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.2.0",
+    "gh-pages": "^3.1.0",
     "jest": "^26.6.3",
     "parcel-bundler": "1.12.3",
     "prettier": "^2.2.1",
