--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build public/index.html",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "deploy": "yarn build && gh-pages -d dist"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
