--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "yarn build && gh-pages -d dist"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
